<resources>
    <string name="app_name">Smart Attendance Manager</string>
    <string name="choose_profile">CHOOSE PROFILE</string>
    <string name="enter_name">USERNAME</string>
    <string name="enter_password">PASSWORD</string>
    <string name="or">OR</string>
    <string name="signup">SIGN UP</string>
    <string name="student_name">NAME</string>
    <string name="register">REGISTER</string>
    <string name="roll_number">ROLL NUMBER</string>
    <string name="get_attendance">GET ATTENDANCE</string>
    <string name="add_manually">ADD MANUALLY</string>
    <string name="get_absent_list">SEE ABSENT LIST</string>
    <string name="get_present_list">SEE PRESENT LIST</string>
    <string name="give_attendance">PRESENT</string>
    <string name="add_student">ADD STUDENT</string>
    <string name="enter_name_student">NAME</string>
    <string name="enter_roll_student">ROLL NUMBER</string>
    <string name="register1">COMPLETE REGISTRATION</string>
    <string name="register2">REGISTER</string>
    <string name="ifRegister">Do you want to Register any more Students?</string>
    <string name="PostiveRegister">Yes</string>
    <string name="NegativeRegister">No</string>
</resources>
