<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="50sp"
            android:weightSum="1">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/icon"
                android:src="@drawable/icon"
                android:padding="15sp"
                android:layout_weight=".4"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/username"
                android:hint="@string/enter_name"
                android:fontFamily="casual"
                android:textStyle="bold"
                android:layout_weight=".2"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/password"
                android:inputType="numberPassword"
                android:hint="@string/enter_password"
                android:fontFamily="casual"
                android:textStyle="bold"
                android:layout_weight=".2"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/signup"
                android:text="@string/signup"
                android:fontFamily="casual"
                android:textStyle="bold"
                android:layout_weight=".2"/>
        </LinearLayout>
</ScrollView>
